-- DataF PostgreSQL 16 schema. Additive and non-destructive; applied by seed.sql.
CREATE EXTENSION IF NOT EXISTS pgcrypto;
DO $$ BEGIN CREATE TYPE user_role AS ENUM ('SUPER_ADMIN','STUDENT_RESIDENT'); EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN CREATE TYPE room_status AS ENUM ('VACANT','MAINTENANCE'); EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN CREATE TYPE invoice_status AS ENUM ('PENDING','PAID','OVERDUE'); EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN CREATE TYPE maintenance_status AS ENUM ('REPORTED','IN_PROGRESS','RESOLVED'); EXCEPTION WHEN duplicate_object THEN NULL; END $$;
DO $$ BEGIN CREATE TYPE staff_role AS ENUM ('MANAGER','MAID','SECURITY','TECHNICIAN'); EXCEPTION WHEN duplicate_object THEN NULL; END $$;
CREATE TABLE IF NOT EXISTS users (
 id uuid PRIMARY KEY DEFAULT gen_random_uuid(), student_id varchar(20) UNIQUE NOT NULL,
 full_name_th varchar(150) NOT NULL, full_name_en varchar(150) NOT NULL,
 email varchar(255) UNIQUE NOT NULL CHECK (email = lower(email)), password_hash varchar(255) NOT NULL,
 phone_number varchar(50), role user_role NOT NULL DEFAULT 'STUDENT_RESIDENT', created_at timestamptz NOT NULL DEFAULT now()
);
CREATE TABLE IF NOT EXISTS room_types (
 id int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, name varchar(100) UNIQUE NOT NULL,
 bed_type varchar(10) UNIQUE NOT NULL CHECK (bed_type IN ('SINGLE','TWIN')),
 base_rent numeric(10,2) NOT NULL CHECK (base_rent >= 0), deposit_amount numeric(10,2) NOT NULL CHECK (deposit_amount >= 0),
 advance_payment numeric(10,2) NOT NULL CHECK (advance_payment >= 0), area_sqm int NOT NULL,
 description text, amenities jsonb NOT NULL DEFAULT '[]'
);
CREATE TABLE IF NOT EXISTS rooms (
 id int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, room_number varchar(20) UNIQUE NOT NULL,
 floor int NOT NULL CHECK (floor BETWEEN 1 AND 3), building varchar(50) NOT NULL DEFAULT 'อาคาร A',
 campus_zone varchar(50) NOT NULL DEFAULT 'โซนหอพัก CDTI', room_type_id int NOT NULL REFERENCES room_types(id),
 status room_status NOT NULL DEFAULT 'VACANT', rent_rate numeric(10,2) NOT NULL CHECK (rent_rate >= 0)
);
CREATE TABLE IF NOT EXISTS room_images (
 room_id int PRIMARY KEY REFERENCES rooms(id), asset_path text UNIQUE NOT NULL, alt_text text NOT NULL
);
CREATE TABLE IF NOT EXISTS leases (
 id uuid PRIMARY KEY DEFAULT gen_random_uuid(), room_id int NOT NULL REFERENCES rooms(id), resident_id uuid NOT NULL REFERENCES users(id),
 start_date date NOT NULL, end_date date NOT NULL CHECK (end_date > start_date),
 deposit_paid numeric(10,2) NOT NULL CHECK (deposit_paid >= 0), contract_active boolean NOT NULL DEFAULT true,
 created_at timestamptz NOT NULL DEFAULT now()
);
CREATE UNIQUE INDEX IF NOT EXISTS one_active_lease_per_room ON leases(room_id) WHERE contract_active;
CREATE UNIQUE INDEX IF NOT EXISTS one_active_lease_per_resident ON leases(resident_id) WHERE contract_active;
CREATE TABLE IF NOT EXISTS utility_rates (
 id int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, effective_date date UNIQUE NOT NULL,
 water_rate_per_unit numeric(8,2) NOT NULL DEFAULT 18 CHECK (water_rate_per_unit >= 0),
 electric_rate_per_unit numeric(8,2) NOT NULL DEFAULT 8 CHECK (electric_rate_per_unit >= 0),
 is_active boolean NOT NULL DEFAULT true
);
CREATE UNIQUE INDEX IF NOT EXISTS one_active_rate ON utility_rates(is_active) WHERE is_active;
CREATE TABLE IF NOT EXISTS meter_readings (
 id int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, room_id int NOT NULL REFERENCES rooms(id),
 billing_month date NOT NULL CHECK (extract(day from billing_month) = 1),
 prev_water_unit numeric(10,2) NOT NULL CHECK (prev_water_unit >= 0), curr_water_unit numeric(10,2) NOT NULL CHECK (curr_water_unit >= prev_water_unit),
 prev_electric_unit numeric(10,2) NOT NULL CHECK (prev_electric_unit >= 0), curr_electric_unit numeric(10,2) NOT NULL CHECK (curr_electric_unit >= prev_electric_unit),
 created_at timestamptz NOT NULL DEFAULT now(), UNIQUE (room_id,billing_month)
);
CREATE TABLE IF NOT EXISTS invoices (
 id uuid PRIMARY KEY DEFAULT gen_random_uuid(), invoice_number varchar(50) UNIQUE NOT NULL,
 room_id int NOT NULL REFERENCES rooms(id), resident_id uuid NOT NULL REFERENCES users(id),
 meter_reading_id int NOT NULL UNIQUE REFERENCES meter_readings(id), utility_rate_id int NOT NULL REFERENCES utility_rates(id),
 billing_cycle date NOT NULL CHECK (extract(day from billing_cycle) = 1),
 rent_amount numeric(10,2) NOT NULL CHECK (rent_amount >= 0), water_amount numeric(10,2) NOT NULL CHECK (water_amount >= 0),
 electric_amount numeric(10,2) NOT NULL CHECK (electric_amount >= 0),
 total_amount numeric(10,2) GENERATED ALWAYS AS (rent_amount + water_amount + electric_amount) STORED,
 status invoice_status NOT NULL DEFAULT 'PENDING', due_date date NOT NULL,
 paid_at timestamptz, created_at timestamptz NOT NULL DEFAULT now(), UNIQUE (room_id,billing_cycle),
 CHECK (due_date >= billing_cycle), CHECK ((status = 'PAID') = (paid_at IS NOT NULL))
);
CREATE TABLE IF NOT EXISTS payment_notifications (
 id uuid PRIMARY KEY DEFAULT gen_random_uuid(), invoice_id uuid NOT NULL REFERENCES invoices(id),
 resident_id uuid NOT NULL REFERENCES users(id), note varchar(500) NOT NULL DEFAULT '',
 status varchar(12) NOT NULL DEFAULT 'SUBMITTED' CHECK (status IN ('SUBMITTED','APPROVED','REJECTED')),
 created_at timestamptz NOT NULL DEFAULT now(), reviewed_by uuid REFERENCES users(id), reviewed_at timestamptz
);
CREATE UNIQUE INDEX IF NOT EXISTS one_pending_payment_notice ON payment_notifications(invoice_id) WHERE status = 'SUBMITTED';
CREATE TABLE IF NOT EXISTS maintenance_requests (
 id int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, room_id int NOT NULL REFERENCES rooms(id), resident_id uuid NOT NULL REFERENCES users(id),
 category varchar(100) NOT NULL CHECK (category IN ('AC','PLUMBING','ELECTRICAL','FURNITURE','OTHER')),
 description text NOT NULL CHECK (char_length(description) BETWEEN 10 AND 2000), status maintenance_status NOT NULL DEFAULT 'REPORTED',
 created_at timestamptz NOT NULL DEFAULT now(), updated_at timestamptz NOT NULL DEFAULT now()
);
CREATE TABLE IF NOT EXISTS staff_directory (
 id int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, name varchar(150) UNIQUE NOT NULL, role staff_role NOT NULL,
 age int CHECK (age BETWEEN 18 AND 100), shift_schedule varchar(255) NOT NULL, phone_number varchar(50) NOT NULL,
 is_emergency boolean NOT NULL DEFAULT false
);
CREATE TABLE IF NOT EXISTS dorm_regulations (
 id int GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, category varchar(100) UNIQUE NOT NULL, rule_title varchar(255) NOT NULL,
 rule_content text NOT NULL, penalty_details text, effective_date date NOT NULL DEFAULT '2026-08-01'
);
CREATE TABLE IF NOT EXISTS auth_sessions (
 id uuid PRIMARY KEY, user_id uuid NOT NULL REFERENCES users(id), expires_at timestamptz NOT NULL,
 revoked_at timestamptz, created_at timestamptz NOT NULL DEFAULT now()
);
CREATE INDEX IF NOT EXISTS auth_sessions_user_idx ON auth_sessions(user_id);
CREATE INDEX IF NOT EXISTS invoices_resident_idx ON invoices(resident_id,billing_cycle DESC);
CREATE INDEX IF NOT EXISTS maintenance_resident_idx ON maintenance_requests(resident_id,created_at DESC);
CREATE TABLE IF NOT EXISTS audit_events (
 id bigint GENERATED ALWAYS AS IDENTITY PRIMARY KEY, actor_id uuid REFERENCES users(id), action varchar(80) NOT NULL,
 entity_id text NOT NULL, details jsonb NOT NULL DEFAULT '{}', created_at timestamptz NOT NULL DEFAULT now()
);
-- Occupancy has one source of truth: an active lease. No duplicated tenant pointer.
CREATE OR REPLACE VIEW room_inventory AS
 SELECT r.*, t.name AS room_type, t.bed_type, t.area_sqm, t.amenities, t.description,
 t.deposit_amount, t.advance_payment,
 CASE WHEN l.id IS NOT NULL THEN 'OCCUPIED' ELSE r.status::text END AS occupancy_status,
 l.resident_id AS current_resident_id, l.id AS lease_id, i.asset_path AS image_url, i.alt_text
 FROM rooms r JOIN room_types t ON t.id = r.room_type_id
 LEFT JOIN leases l ON l.room_id = r.id AND l.contract_active
 LEFT JOIN room_images i ON i.room_id = r.id;

