// ==========================================
// ENUMS
// ==========================================

enum user_role {
  SUPER_ADMIN
  STUDENT_RESIDENT
}

enum room_status {
  VACANT
  MAINTENANCE
}

enum invoice_status {
  PENDING
  PAID
  OVERDUE
}

enum maintenance_status {
  REPORTED
  IN_PROGRESS
  RESOLVED
}

enum staff_role {
  MANAGER
  MAID
  SECURITY
  TECHNICIAN
}

// ==========================================
// TABLES
// ==========================================

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  student_id varchar(20) [unique, not null]
  full_name_th varchar(150) [not null]
  full_name_en varchar(150) [not null]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  phone_number varchar(50)
  role user_role [not null, default: 'STUDENT_RESIDENT']
  created_at timestamptz [not null, default: `now()`]
}

Table room_types {
  id int [pk, increment]
  name varchar(100) [unique, not null]
  bed_type varchar(10) [unique, not null]
  base_rent decimal(10,2) [not null]
  deposit_amount decimal(10,2) [not null]
  advance_payment decimal(10,2) [not null]
  area_sqm int [not null]
  description text
  amenities jsonb [not null]
}

Table rooms {
  id int [pk, increment]
  room_number varchar(20) [unique, not null]
  floor int [not null]
  building varchar(50) [not null, default: 'อาคาร A']
  campus_zone varchar(50) [not null, default: 'โซนหอพัก CDTI']
  room_type_id int [not null]
  status room_status [not null, default: 'VACANT', note: 'OCCUPIED is derived from an active lease in room_inventory view']
  rent_rate decimal(10,2) [not null]
}

Table room_images {
  room_id int [pk]
  asset_path text [unique, not null]
  alt_text text [not null]
}

Table leases {
  id uuid [pk, default: `gen_random_uuid()`]
  room_id int [not null]
  resident_id uuid [not null]
  start_date date [not null]
  end_date date [not null]
  deposit_paid decimal(10,2) [not null]
  contract_active boolean [not null, default: true, note: 'Partial unique indexes on room_id and resident_id WHERE contract_active']
  created_at timestamptz [not null, default: `now()`]
}

Table utility_rates {
  id int [pk, increment]
  effective_date date [unique, not null]
  water_rate_per_unit decimal(8,2) [not null, default: 18]
  electric_rate_per_unit decimal(8,2) [not null, default: 8]
  common_fee decimal(8,2) [not null, default: 300]
  is_active boolean [not null, default: true, note: 'One active rate via partial unique index']
}

Table meter_readings {
  id int [pk, increment]
  room_id int [not null]
  billing_month date [not null]
  prev_water_unit decimal(10,2) [not null]
  curr_water_unit decimal(10,2) [not null]
  prev_electric_unit decimal(10,2) [not null]
  curr_electric_unit decimal(10,2) [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (room_id, billing_month) [unique]
  }
}

Table invoices {
  id uuid [pk, default: `gen_random_uuid()`]
  invoice_number varchar(50) [unique, not null]
  room_id int [not null]
  resident_id uuid [not null]
  meter_reading_id int [unique, not null]
  utility_rate_id int [not null]
  billing_cycle date [not null]
  rent_amount decimal(10,2) [not null]
  water_amount decimal(10,2) [not null]
  electric_amount decimal(10,2) [not null]
  common_fee decimal(10,2) [not null]
  total_amount decimal(10,2) [note: 'GENERATED ALWAYS AS rent + water + electric + common_fee STORED']
  status invoice_status [not null, default: 'PENDING']
  due_date date [not null]
  paid_at timestamptz
  created_at timestamptz [not null, default: `now()`]

  indexes {
    (room_id, billing_cycle) [unique]
  }
}

Table payment_notifications {
  id uuid [pk, default: `gen_random_uuid()`]
  invoice_id uuid [not null]
  resident_id uuid [not null]
  note varchar(500) [not null]
  status varchar(12) [not null, default: 'SUBMITTED', note: 'SUBMITTED / APPROVED / REJECTED. One pending notice per invoice.']
  created_at timestamptz [not null, default: `now()`]
  reviewed_by uuid
  reviewed_at timestamptz
}

Table maintenance_requests {
  id int [pk, increment]
  room_id int [not null]
  resident_id uuid [not null]
  category varchar(100) [not null]
  description text [not null]
  status maintenance_status [not null, default: 'REPORTED']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table staff_directory {
  id int [pk, increment]
  name varchar(150) [unique, not null]
  role staff_role [not null]
  age int
  shift_schedule varchar(255) [not null]
  phone_number varchar(50) [not null]
  is_emergency boolean [not null, default: false]
  assigned_room_id int [note: 'ห้องประจำของพนักงาน']
}

Table dorm_regulations {
  id int [pk, increment]
  category varchar(100) [unique, not null]
  rule_title varchar(255) [not null]
  rule_content text [not null]
  penalty_details text
  effective_date date [not null, default: '2026-08-01']
}

Table auth_sessions {
  id uuid [pk]
  user_id uuid [not null]
  expires_at timestamptz [not null]
  revoked_at timestamptz
  created_at timestamptz [not null, default: `now()`]
}

Table audit_events {
  id bigint [pk, increment]
  actor_id uuid
  action varchar(80) [not null]
  entity_id text [not null]
  details jsonb [not null]
  created_at timestamptz [not null, default: `now()`]
}

// ==========================================
// RELATIONSHIPS (FOREIGN KEYS)
// ==========================================

Ref: rooms.room_type_id > room_types.id
Ref: room_images.room_id - rooms.id
Ref: leases.room_id > rooms.id
Ref: leases.resident_id > users.id
Ref: meter_readings.room_id > rooms.id
Ref: invoices.room_id > rooms.id
Ref: invoices.resident_id > users.id
Ref: invoices.meter_reading_id - meter_readings.id
Ref: invoices.utility_rate_id > utility_rates.id
Ref: payment_notifications.invoice_id > invoices.id
Ref: payment_notifications.resident_id > users.id
Ref: payment_notifications.reviewed_by >? users.id
Ref: maintenance_requests.room_id > rooms.id
Ref: maintenance_requests.resident_id > users.id
Ref: auth_sessions.user_id > users.id
Ref: audit_events.actor_id >? users.id
Ref: staff_directory.assigned_room_id >? rooms.id